# Algoritmos-Nao-Supervisionados-para-Clusterizacao

./: README.md  projeto_da_disciplina.ipynb  pyproject.toml  requirements.txt
