[tool.poetry]
name = "projeto-da-disciplina"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projeto_da_disciplina"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.1"
seaborn = "^0.12.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
numpy = "^1.23.4"
plotly = "^5.11.0"
geopy = "^2.3.0"
kmedoids = "^0.4.1"
scikit-learn-extra = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
